--- a/references.bib
+++ b/references.bib
@@ -16,3 +16,14 @@
   year={2022},
   publisher={Wiley Online Library}
 }
+
+@article{song2021untangling,
+  title={Untangling the complexity of priority effects in multispecies communities},
+  author={Song, Chuliang and Fukami, Tadashi and Saavedra, Serguei},
+  journal={Ecology Letters},
+  volume={24},
+  number={11},
+  pages={2301--2313},
+  year={2021},
+  publisher={Wiley Online Library}
+}
