--- a/vignettes/assembly.Rmd
+++ b/vignettes/assembly.Rmd
@@ -14,109 +14,69 @@ knitr::opts_chunk$set(
 )
 ```
 
-# Example workflow
+# Getting started
 
-Following food web terminology, I talk here about _resources_ and _consumers_. In the case of plant-pollinator networks, this is analogous as replacing _resource_ with _plant_ and _consumers_ with _pollinator_. In this case, however, some filtering steps may be unnecessary and unwanted. __More about this in a separate section.__
+## Background
 
-I show an example workflow that is composed of the following steps:
+Following food web terminology, I talk here about _resources_ and _consumers_. In the case of plant-pollinator networks, this is analogous as replacing _resources_ with _plants_ and _consumers_ with _pollinators_. In this case, however, some filtering steps may be unnecessary or unwanted. I plan to add more functionalities and tests for mutualistic network in the future. I also talk about metawebs, which are the regional food web networks that emerge considering all interactions that occur in local communities within the region of interest.
 
-1. draw random species from a metaweb
-2. impose resource filtering, i.e. each basal species must be consumed and each consumer must feed on a resource.
-3. impose limiting similarity filtering, i.e. consumers are constantly replaced by others following a probability distribution proportional to their similarity of interactions. 
+The main scope of _assembly_ is to simulate top-down assembly processes. Top-down assembly means that all species are introduced into a local community at once. The opposite, i.e. communities are built by sequential introductions of one species, is called bottom-up assembly. Bottom-up assembly is problematic for community composed of many species, as the number of unique assembly sequences is _S!_, where _S_ is the number of species in the metaweb. For 100 species, for instance, there are $\sim 10^{157}$ unique sequences, making computations (and replications) virtually impossible.
 
-## Draw random species from a metaweb
+Strikingly, @servan2021tractable showed that bottop-up and top-down assembly are equivalent under some specific conditions. Far from assuming this is the case in _assembly_, I simply want to highlight that _assembly_ only implements top-down assembly and that none of the procedures in _assembly_ can be considered steps in an ecological sequence. Whenever I talk about _steps_, _moves_, and _sequences_ in _assembly_, I always refer to _procedure steps_, _procedure moves_, and _procedure sequences_. Always keep that in mind and don't be fooled by the terminology; there is no bottom-up assembly in _assembly_.
 
-```{r random, fig.align='center', fig.width=4, fig.height=4}
+## General workflow of _assembly_
+
+In general, _assembly_ implements this pipeline:
+
+1. Draw random species from a metaweb.
+2. Impose resource filtering, i.e. each basal species must be consumed and each consumer must feed on a resource.
+3. Impose limiting similarity filtering, i.e. consumers are replaced by others, depending on a probability distribution proportional to their similarity of interactions.
+
+These steps are not necessarily sequential, i.e. limiting similarity can be imposed independently from the resource filtering, but this is programmatically harder. Because ecological communities are likely filtered by resource availability before interaction competition, I wrote _assembly_ in a way that is straightforward to pass the output of the resource filtering procedure to the limiting similarity one. It is, however, possible to omit/invert procedures by performing extra-checks on input/output data and implementing few pre-procedure steps.
+
+# Draw random species from a metaweb
+
+Load _assembly_ and set a random seed
+
+```{r init}
 library(assembly)
-library(igraph)
+set.seed(123)
+```
 
-set.seed(1234)
+Load the dataset _adirondack_ that comes with _assembly_:
 
-# load Adirondack dataset
-# this is part of the assembly package
-data(adirondack) 
+```{r adirondack}
+data(adirondack)
+```
 
+_adirondack_ is the Adirondack Lakes metaweb as obtained from the GATEWAy database.
+
+`draw_random_species(n, sp.names)` draws random species from a metaweb and requires as input the number of species to draw (*n*) and the species names (*sp.names*). If the metaweb does not have species names, you can assign random ones with `name_metaweb(metaweb)`:
+
+```{r name}
 S <- 50 #species richness
-sp <- draw_random_species(S, colnames(adirondack)) #draw 50 random species
-sum(colSums(adirondack[sp, sp]) == 0) #20 basal species
-show_fw(sp, adirondack, title = "Random")
-plot(graph_from_adjacency_matrix(adirondack[sp, sp]), vertex.label = NA)
+sp <- draw_random_species(S, colnames(adirondack))
 ```
 
-You can see that some species are isolated, i.e. they do not interact with any other species in the local community. You can find isolated species with the hidden function ```assembly:::.find_isolated()```.
+I implemented also some visualization functionalities.
 
-```{r hidden_isolated}
-assembly:::.find_isolated(sp, adirondack)
-```
-Similarly, it's possible to obtain the number of weakly connected components of the graph of the local community:
-
-```{r components}
-assembly:::.components(sp, adirondack)
-```
-
-The reason there are hidden functions in _assembly_ is because there is no need to call them directly. Hidden functions can be accessed by prefixing the `assembly:::` (three colon, not two).
-
-To impose the resource filtering, I call the function `resource_filtering()`. This takes as input the species names, the metaweb, and an optional argument _keep.n.basal_ to specify weather the original number of basal species should be kept constant (default = `FALSE`). **NOTE this still not implemented correctly***
-
-```{r resource, fig.align='center', fig.width=4, fig.height=4}
-sp_resource <- resource_filtering(sp, adirondack, keep.n.basal = TRUE)
-show_fw(sp_resource, adirondack, title = "Resource filtering")
-plot(graph_from_adjacency_matrix(adirondack[sp_resource, sp_resource]), vertex.label = NA)
-```
-Now the local community is fully connected, i.e. basal species always have a consumer and consumers always have an available resource. It's possible to check this manually calling other hidden functions and working on the adjacency matrix of the local community:
-
-```{r check_connected}
-bas <- intersect(sp_resource, assembly:::.basals(adirondack))
-cons <- intersect(sp_resource, assembly:::.consumers(adirondack))
-all(rowSums(adirondack[bas, cons]) > 0)
-all(colSums(adirondack[union(bas, cons), cons]) > 0)
-```
-
-In general, there is no need to check this, as if this is not the case `resource_filtering()` will fail: __put example here.__
-
-```{r fail}
-# nothing for now
-```
-
-## Example 1: Trophic levels in random and filtered communities
-
-For 50 local communities I:
-
-1. draw random species
-2. apply the resource filtering procedure
-3. calculate the trophic level of the species in the local communities
-4. I calculate average and maximum trophic levels within each community
-
-```{r trolev}
-# TL_random <- matrix(NA, S, 50)
-# TL_resource <- matrix(NA, S, 50)
-# for (i in seq_len(50)) {
-#   sp <- draw_random_species(S, colnames(adirondack))
-#   sp_resource <- resource_filtering(sp, adirondack, keep.n.basal = TRUE)
-#   TL_random[, i] <- ATNr::TroLev(adirondack[sp, sp])[, 1]
-#   TL_resource[, i] <- ATNr::TroLev(adirondack[sp_resource, sp_resource])[, 1]
-# }
-# plot(colMeans(TL_random), colMeans(TL_resource),
-#      xlim = c(1.1, 2.2), ylim = c(1.1, 2.2),
-#      main = "Average trophic level",
-#      xlab = "Random communities",
-#      ylab = "Resource filtered communities")
-# abline(0, 1)
-# plot(apply(TL_random, 2, max), apply(TL_resource, 2, max),
-#      xlim = c(2.2, 9.2), ylim = c(2.2, 9.2),
-#      main = "Maximum trophic level",
-#      xlab = "Random communities",
-#      ylab = "Resource filtered communities")
-# abline(0, 1)
-```
-
-Trophic level tend to be higher in resource-filtered communities compared to random communities. This is due to isolated consumers (trophic level = 1) in the random communities and that were replaced by connected consumers when imposing resource filtering. It's also evident when computing the number of connected components:
-
-```{r}
+```{r show_fw}
 show_fw(sp, adirondack)
-assembly:::.components(sp, adirondack)
-
-show_fw(sp_resource, adirondack)
-assembly:::.components(sp_resource, adirondack)
 ```
 
+```{r show_graph}
+show_graph(sp, adirondack)
+```
+
+## Hidden functions
+
+There are several hidden functions in _assembly_. The reason there are hidden functions is because there is no need to call them directly. Hidden functions can be accessed by prefixing the `assembly:::` (three colon, not two). All hidden functions start with a dot `.`, e.g. `assembly:::.basals()`.
+
+In general, you should not be bothered by hidden functions and should not call them directly, unless you have a good understanding of how they operate. Nevertheless, I summarize them for clarity.
+
+  - `assembly:::.basals()` get all basal species in the metaweb, and is equivalent to subset the names of the metaweb where `colSums(metaweb) == 0`
+  - `assembly:::.consumers()` and `assembly:::.top()` return the consumers and top consumers of the metaweb, respectively
+  - `assembly:::.find_isolated()` returns the species that are isolated in the local community
+  - `assembly:::.find_replacements()` find suitable replacement for the isolated species
+  - `assembly:::.move()` performs a move in the limiting similarity procedure (more about this later).
+  - `assembly:::.components()` returns the number of connected components in the graph of the local community
